# GLESNative

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/glesnative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/assets/dc/: dining_car.gltf
app/src/main/cpp/assets/pbrtest/: bdrf_intergation.hdr
app/src/main/cpp/cmake/: gnu-amalgamate.sh
app/src/main/cpp/scripts/cmake-toolchains/: HOWTO.txt  iOS.cmake
app/src/main/cpp/scripts/config/: vs-code.settings
app/src/main/cpp/src/: template-window.hpp
app/src/main/cpp/src/engine/: CMakeLists.txt  RendererES3.cpp  application.cpp  application.h  engine.cpp  engine.h  engine_config.h  gles3jni.cpp  gles3jni.h  helloworld.cpp  scene.cpp  scene.h  system.h
app/src/main/cpp/src/engine/shader/: beauty_fs.shd  beauty_vs.shd  camera_fs.shd  camera_vs.shd  imgui_fs.shd  imgui_vs.shd  shaderdb.config
app/src/main/cpp/src/engine/shader/varying/: camera_varying.shd  imgui_varying.shd
app/src/main/java/com/example/glesnative/: GLNativeJNI.java  GLNativeView.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/glesnative/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
